# Project-Green

./: README.md  package-lock.json  package.json  setup-tauri.ps1  tsconfig.json
src/: App.css  App.tsx  Bars.css  Bars.tsx  Dashboard.tsx  DetailPanel.css  DetailPanel.tsx  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
